# rBergomi-HedgeRL

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
hedgerl/: __init__.py  cli.py
model_files/: architecture_info.pkl  normalization_stats.pkl  policy_weights.pth
src/agents/: backtest.py  driver.py  grid.yaml  train_ppo.py  utils.py
src/backtester/: delta_hedge.py  main_backtrader.py  model_wrapper_bt.py  option_calculator.py
src/env/: hedging_env.py
src/results/: pareto_raw.csv
src/sim/: get_spy_data.py  option_price_assignment.py  rbergomi_params.py  rbergomi_sim.py  utils.py
