[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hedgerl"
dynamic = ["version"]
description = "Deep reinforcement learning for options hedging using rBergomi simulation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "HedgeRL Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "gymnasium>=0.26.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    "optuna>=3.0.0",
    "torch>=1.11.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "cupy-cuda11x>=10.0.0; platform_system != 'Darwin'",
    "backtrader>=1.9.76",
    "tensorboard>=2.7.0",
    "yfinance>=0.1.70",
]

[project.optional-dependencies]
quantconnect = [
    "quantconnect-stubs>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/user/rBergomi-HedgeRL"

[project.scripts]
hedgerl = "hedgerl.cli:main"

[tool.setuptools_scm]
write_to = "hedgerl/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["hedgerl*", "src*"]
exclude = ["tests*"]
